Working complete implementation